--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="style.css">    <title>Document</title>
 </head>
 <body>
-    <h1>Hello This is new Branch  </h1>
+    <h1>This is an update  </h1>
     <script src="app.js"></script>
 </body>
 </html>
